bin_PROGRAMS = videopad-server

videopad_server_SOURCES = \
        Main.cpp Main.h \
	ArgParser.cpp ArgParser.h \
	SettingsFile.cpp SettingsFile.h \
	Logger.cpp Logger.h \
	TCPListener.cpp TCPListener.h \
	Server.cpp Server.h \
	Server_ClientProcess.cpp Server_Commands.cpp \
	Server_NewClientConnection.cpp Server_DataProcess.cpp \
	DataConnection.cpp DataConnection.h \
	Client.cpp Client.h \
	Channel.cpp Channel.h \
	MyString.cpp MyString.h \
	OggStream.cpp OggStream.h \
	OggDecoder.cpp OggDecoder.h \
	VideoStream.h \
	AudioStream.h \
	SerialMapper.h SerialMapper.cpp
